# Transformer-based-Sentiment-Analysis

./: .gitignore  README.md  pyproject.toml
results/metrics/: baseline_results.csv
results/transformer_test/checkpoint-15988/: scheduler.pt  trainer_state.json
src/: baseline_models.py  eda.py  evaluation.py  preprocessing.py  transformer_model.py
